Issue SB-13428 fix: Explore- Course / Course page : UI glitch is visible on Course page for Topis selection pop up

--- a/src/app/client/src/assets/styles/base/_sizing.scss
+++ b/src/app/client/src/assets/styles/base/_sizing.scss
@@ -1,3 +1,10 @@
 .sb-mw-100 {
     max-width: 100% !important;
 }
+
+.auto-height {
+    height:auto !important;
+}
+.max-height {
+    height:380px !important;
+}
